--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       const showRope = incorrectCount > 3;
       const showSupport = incorrectCount > 4;
       // Face (Eric image)
-      const ericImg = showHead ? `<image href='eric.png' x='53' y='28' width='54' height='54' clip-path='url(#ericClip)' class='hangman-face${showHead ? ' visible' : ''}' style='opacity:${showHead ? 1 : 0};transition:opacity 0.3s;' />` : '';
+      const ericImg = showHead ? `<image href='eric.png' x='53' y='28' width='54' height='54' class='hangman-face${showHead ? ' visible' : ''}' style='opacity:${showHead ? 1 : 0};transition:opacity 0.3s;' />` : '';
       const svg = `
         <svg width="120" height="180" viewBox="0 0 120 180">
           <defs>
