--- a/index.html
+++ b/index.html
@@ -201,8 +201,6 @@
           <line x1="30" y1="20" x2="80" y2="20" class="hangman-part${showBeam?' visible':''}" id="beam" />
           <line x1="80" y1="20" x2="80" y2="40" class="hangman-part${showRope?' visible':''}" id="rope" />
           <line x1="30" y1="50" x2="60" y2="20" class="hangman-part${showSupport?' visible':''}" id="support" />
-          <!-- Head (Eric image only, no circle) -->
-          ${ericImg}
           <!-- Body -->
           <line x1="80" y1="70" x2="80" y2="110" class="hangman-part${showBody?' visible':''}" id="body" />
           <!-- Left Arm -->
@@ -213,6 +211,8 @@
           <line x1="80" y1="110" x2="65" y2="140" class="hangman-part${showLeftLeg?' visible':''}" id="leftLeg" />
           <!-- Right Leg -->
           <line x1="80" y1="110" x2="95" y2="140" class="hangman-part${showRightLeg?' visible':''}" id="rightLeg" />
+          <!-- Head (Eric image on top) -->
+          ${ericImg}
         </svg>
       `;
       hangmanDrawing.innerHTML = svg;
